# shark-lab

./: .gitignore  README.md  convert_hf.py  infer.py  inference.py  options.toml  server.py  sft_trainer.py  train.py  trainer.py
configs/: 360m.toml  collector_options.toml
cpp/: CMakeLists.txt  compile_commands.json
cpp/apps/: example.cpp
cpp/include/shark/: model.hpp
cpp/shared/: model.cpp
python/: infer.py  server.py  train.py
python/shark/: format.py
rocm/: CMakeLists.txt  SConstruct
rocm/hip-test/: CMakeLists.txt  SConscript  main.cpp
rocm/shark/: SConscript
rocm/shark/include/shark/: common.h  shark.h
rocm/shark/src/: shark.cpp
scripts/: calculator.py  collector.py  model_inspector.py  notes.md
scripts/collector_shot/: collector_shot.py  meta_options.toml
shared/: draft.py  format.py  model.py  util.py
shark/: __init__.py  format.py  model.py  util.py
